Some fix on messageModal on mobile device

--- a/src/components/ErrorMessage/ErrorMessage.scss
+++ b/src/components/ErrorMessage/ErrorMessage.scss
@@ -1,16 +1,21 @@
 .dialogError {
   position: fixed;
   height: fit-content;
-  width: 20rem;
-  top: 5rem;
-  left: 50%;
+
   background-color: rgb(221, 181, 181);
   color: black;
-
   border: solid 2px rgb(255, 0, 0);
   border-radius: 1rem;
   padding: 1rem;
+  width: 15rem;
+  top: 5rem;
+  left: 5rem;
 
+  @media screen and (min-width: 768px) {
+    width: 20rem;
+    top: 5rem;
+    left: 50%;
+  }
   &__close-btn {
     position: absolute;
     transform: rotateZ(45deg);
